2003-11-06  Shaun McCance  <shaunm@gnome.org>

	* src/test-uri:
	* src/yelp-uri.c:
	* src/yelp-uri.h:
	- New GObjectified URI code

	* src/test-pager.c:
	* src/yelp-db-pager.c:
	* src/yelp-db-pager.h:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	- New transformation code

2003-10-12  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-cache.c:
	* src/yelp-cache.h:
	* src/yelp-db2html.c:
	* src/yelp-reader.c:
	* src/yelp-scrollkeeper.c:
	* src/yelp-view-content.c:
	- Revert change for making navbars in C.  Should not be necessary
	  with new stylesheets.
	- Use new stylesheets

2003-10-06  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mr" to ALL_LINGUAS.

2003-10-06  Žygimantas Beručka  <uid0@tuxfamily.org>

	* configure.in: Added "lt" to ALL_LINGUAS

2003-09-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c: Added self to About

2003-08-27  Shaun McCance  <shaunm@wolfram.com>

	* src/yelp-main.c
	- Fix from alexl for rather nasty problem when DISPLAY is set.

2003-08-26  Shaun McCance  <shaunm@wolfram.com>

	* src/yelp-cache.c
	* src/yelp-cache.h
	* src/yelp-db2html.c
	* src/yelp-reader.c
	* src/yelp-scrollkeeper.c
	* src/yelp-view-content.c
	- Big speedup to transformation of large DocBook documents
	  by generating navigation links in C from ScrollKeeper info.

2003-08-26  Shaun McCance  <shaunm@wolfram.com>

	* README: Updated README so it's correct

2003-08-18  Shaun McCance  <shaunm@wolfram.com>

	* src/yelp-window.c: declare variables at top of block

2003-08-18  Jakub Steiner <jimmac@ximian.com>

	* stylesheets/docbook/*.png: provide nicer, gnome2-styled images

2003-08-15  Mikael Hallendal  <micke@imendio.com>

        * src/GNOME_Yelp.server.in: Replaced yelp-base for yelp. Not sure what
          should be in there really... Might fix bug #119764

	* src/yelp-window.c: (window_init), (window_configure_cb):
        - Save size from last window. Patch by Shaun McCance.
        - Fixes bug #90451

	* configure.in: 