@@ -1,5 +1,10 @@
 2003-11-06  Shaun McCance  <shaunm@gnome.org>
 
+	* src/Makefile.am:
+	- Changes for new URI and Pager code
+
+2003-11-06  Shaun McCance  <shaunm@gnome.org>
+
 	* src/test-uri:
 	* src/yelp-uri.c:
 	* src/yelp-uri.h:
